force-app/main/default/objects/PDRI__Managed_Instances_Deploy__c/PDRI__Managed_Instances_Deploy__c.object-meta.xml
<CustomObject>
    <label>Managed Instances Deploy</label>
    <nameField>
        <displayFormat>MID-{00000000}</displayFormat>
        <label>Managed Instances Deploy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Instances Deployes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>