force-app/main/default/objects/PDRI__Managed_Instances_Deploy__c/fields/PDRI__Last_Deploy_Hash__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Last_Deploy_Hash__c</fullName>
    <label>Last Deploy Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>