force-app/main/default/objects/PDRI__Managed_Instances_Deploy__c/fields/PDRI__Last_Deploy_Time__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Last_Deploy_Time__c</fullName>
    <label>Last Deploy Time</label>
    <type>DateTime</type>
</CustomField>