force-app/main/default/objects/PDRI__Managed_Instances_Deploy__c/fields/PDRI__Salesforce_Instance__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Salesforce_Instance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Salesforce Instance</label>
    <referenceTo>PDRI__Salesforce_Instance__c</referenceTo>
    <relationshipLabel>Managed Instances Deployes</relationshipLabel>
    <relationshipName>Managed_Instances_Deployes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>